src/recipe/snapshots/rattler_build__recipe__parser__tests__binary_relocation_paths.snap
---
source: src/recipe/parser.rs
expression: recipe
---
package:
  name: zlib
  version: 0.1.0
build:
  number: 0
  dynamic_linking:
    binary_relocation:
      - /usr/lib/**
      - /etc
    overdepending_behavior: ignore
    overlinking_behavior: ignore
  merge_build_and_host_envs: false
requirements: {}

