src/recipe/snapshots/rattler_build__recipe__parser__tests__map_null_values.snap
---
source: src/recipe/parser.rs
expression: recipe
---
schema_version: 1
package:
  name: zlib
  version: 0.1.0
build:
  number: 0
  script: "${{ \"echo 'world'\" if true }}"
  prefix_detection:
    force_file_type:
      binary:
        - zlib
requirements:
  run:
    - zlib
